correcciones ftp